--- a/HTML/home.html
+++ b/HTML/home.html
@@ -3,28 +3,14 @@
 	<head>
 	</head>
 	<body>
-	<h1 id="bigOne"> </h1>
-	<h1 id="bigTwo"> </h1>
-	<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
-	<script>
-	  // Initialize Firebase
-	  var config = {
-	    apiKey: "AIzaSyAt_-_1I9ISW4PmF1DgW_03wO9PLdJ10uE",
-	    authDomain: "coursetown-cfe36.firebaseapp.com",
-	    databaseURL: "https://coursetown-cfe36.firebaseio.com",
-	    projectId: "coursetown-cfe36",
-	    storageBucket: "coursetown-cfe36.appspot.com",
-	    messagingSenderId: "141311531998"
-	  };
-	  firebase.initializeApp(config);
-
-	  var bigOne = document.getElementById('bigOne');
-	  var dbRef = firebase.database().ref().child('text');
-	  dbRef.on('value', snap => bigOne.innerText = snap.val());
-
-	  var bigTne = document.getElementById('bigTwo');
-	  var dbRef = firebase.database().ref().child('tex');
-	  dbRef.on('value', snap => bigTne.innerText = snap.val());
-	</script>
+		<ul id="navbar">
+			<li id="navbarlist"><a href="home.html">Home</a> </li>
+			<li id="navbarlist"><a href="about.html">About</a></li>
+			<li id="navbarlist"><a href="myprofile.html">My Profile</a> </li>
+			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
+			<li id="navbarlist"><a href="Matches.html">Matches</a> </li>
+			<li id="navbarlist"><a href="contact.html">Contact</a> </li>
+		</ul>
+	
 	</body>
 </html>
