--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="../CSS/style.css"/>
+	</head>
+	<body>
+		<ul id="navbar">
+			<li id="navbarlist"><a href="contact.html">Contact</a> </li>
+			<li id="navbarlist"><a href="Matches.html">Matches</a> </li>
+			<li id="navbarlist"><a href="explore.html">Explore</a> </li>
+			<li id="navbarlist"><a href="myprofile.html">My Profile</a> </li>
+			<li id="navbarlist"><a href="about.html">About</a> </li>
+			<li id="navbarlist"><a href="home.html">Home</a> </li>
+		</ul>
+	
+	</body>
+</html>
