--- a/HTML/home.html
+++ b/HTML/home.html
@@ -12,6 +12,6 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
-	
+		<p> "One man's trash is another man's treasure." -Yotam Ottolenghi</p>
 	</body>
 </html>
