--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -12,6 +12,10 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
+
+		<table width =1200>
+			<tr><th><h1>Potential</h1></th><th><h1>History</h1></th></tr>
+		</table>
 	
 	</body>
 </html>
