--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -12,10 +12,12 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
-		
-
 		<table width =1200>
 			<tr><th><h1>Your Schedule</h1></th><th><h1>Offered</h1></th><th><h1>Desired</h1></th></tr>
+			<tr><td><h3>Period 1</h3></td><td><h3>Period 1</h3></td><td><h3>Period 1</h3></td></tr>
+			<tr><td><h3>Period 2</h3></td><td><h3>Period 2</h3></td><td><h3>Period 2</h3></td></tr>
+			<tr><td><h3>Period 3</h3></td><td><h3>Period 3</h3></td><td><h3>Period 3</h3></td></tr>
+			<tr><td><h3>Period 4</h3></td><td><h3>Period 4</h3></td><td><h3>Period 4</h3></td></tr>
 		</table>
 	</body>
 </html>
