Got data from firebase + tables!
SEMICOLONS AND SPELLING IS KEY

--- a/HTML/explore.html
+++ b/HTML/explore.html
@@ -12,5 +12,42 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
+		<div align="center">
+			<table width=1250 bordercolor=black>
+				<tr align="center">
+					<td>
+						<p> hi </p>
+					</td>
+					<td> 
+						<p> hi </p>
+					</td>
+					<td> 
+						<p> hi </p>
+					</td>
+				</tr>
+				<tr align="center">
+					<td>
+						<p> hi </p>
+					</td>
+					<td> 
+						<p> hi </p>
+					</td>
+					<td> 
+						<p> hi </p>
+					</td>
+				</tr>
+				<tr align="center">
+					<td>
+						<p> hi </p>
+					</td>
+					<td> 
+						<p> hi </p>
+					</td>
+					<td> 
+						<p> hi </p>
+					</td>
+				</tr>
+			</table> 
+		</div>
 	</body>
 </html>
