--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -13,17 +13,22 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
-
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<div align="center">
 			<table width =1200>
-				<tr align = "left">
+				<tr align = "center">
 					<th><h1>Personal</h1></th>
 					<th><h1>Your Schedule </h1></th>
 					<th><h1>Offered</h1></th>
 					<th><h1>Desired</h1></th>
 				</tr>
-				<tr>
-					<td> 
+				<tr align = "center">
+					<td rowspan="2"> 
 						<form> 
 							<p> Full Name: <input type="text" size="15" id = "name"> </p>
 						</form>
@@ -56,14 +61,14 @@
 						</form>
 					</td>
 				</tr>
-				<tr>
+				<tr align = "center">
 					<td>
-					</td>
-					<td>
+						<br>
 						<button onclick="submitSchedule()">Submit</button>
 						<p> Please fill in according to your day 1 schedule. </p>
 					</td>
 					<td colspan = "2">
+						<br>
 						<button onclick="submitOffer()">Submit</button>
 						<p> You must offer and desire a course for the same period. </p>
 					</td>
