just added firebase

--- a/HTML/explore.html
+++ b/HTML/explore.html
@@ -49,5 +49,20 @@
 				</tr>
 			</table> 
 		</div>
+		<script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
+		<script>
+
+		  	// Initialize Firebase
+		 	var config = {
+			    apiKey: "AIzaSyAt_-_1I9ISW4PmF1DgW_03wO9PLdJ10uE",
+			    authDomain: "coursetown-cfe36.firebaseapp.com",
+			    databaseURL: "https://coursetown-cfe36.firebaseio.com",
+			    projectId: "coursetown-cfe36",
+			    storageBucket: "coursetown-cfe36.appspot.com",
+			    messagingSenderId: "141311531998"
+		 	};
+		  	firebase.initializeApp(config);
+
+		</script>
 	</body>
 </html>
