--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -131,6 +131,9 @@
 		  				.then(function(snapshot) {
 		  					
 		  					desired = snapshot.child("Desired/Period_1").val();
+		  					desired2 = snapshot.child("Desired/Period_2").val();
+		  					desired3 = snapshot.child("Desired/Period_3").val();
+		  					desired4 = snapshot.child("Desired/Period_4").val();
 
 		  					/*Matches it with one of the offered courses available*/
 		  					var i;
