changed layout on explore page (added course code heading and centered codes)

--- a/HTML/explore.html
+++ b/HTML/explore.html
@@ -100,28 +100,32 @@
 			  		for (i = 0; i < period1.length; i++) {
 			  			var rows = i + 2;
 			  			document.getElementById("row1").innerHTML = "<td width=\"50%\" align=\"center\" rowspan=\"" + rows + "\"><h1>Period 1</h1></td>";
-			  			document.getElementById("Period1").innerHTML += "<tr><td>" + period1[i] + "</td></tr>";
+			  			document.getElementById("row1").innerHTML += "<td align=\"center\"><h3>Course Code</h3></td>";
+			  			document.getElementById("Period1").innerHTML += "<tr><td align=\"center\">" + period1[i] + "</td></tr>";
 			  		}
 
 			  		var i;
 			  		for (i = 0; i < period2.length; i++) {
 			  			var rows = i + 2;
 			  			document.getElementById("row2").innerHTML = "<td width=\"50%\" align=\"center\" rowspan=\"" + rows + "\"><h1>Period 2</h1></td>";
-			  			document.getElementById("Period2").innerHTML += "<tr><td>" + period2[i] + "</td></tr>";
+			  			document.getElementById("row2").innerHTML += "<td align=\"center\"><h3>Course Code</h3></td>";
+			  			document.getElementById("Period2").innerHTML += "<tr><td align=\"center\">" + period2[i] + "</td></tr>";
 			  		}
 
 			  		var i;
 			  		for (i = 0; i < period3.length; i++) {
 			  			var rows = i + 2;
 			  			document.getElementById("row3").innerHTML = "<td width=\"50%\" align=\"center\" rowspan=\"" + rows + "\"><h1>Period 3</h1></td>";
-			  			document.getElementById("Period3").innerHTML += "<tr><td>" + period3[i] + "</td></tr>";
+			  			document.getElementById("row3").innerHTML += "<td align=\"center\"><h3>Course Code</h3></td>";
+			  			document.getElementById("Period3").innerHTML += "<tr><td align=\"center\">" + period3[i] + "</td></tr>";
 			  		}
 
 			  		var i;
 			  		for (i = 0; i < period4.length; i++) {
 			  			var rows = i + 2;
 			  			document.getElementById("row4").innerHTML = "<td width=\"50%\" align=\"center\" rowspan=\"" + rows + "\"><h1>Period 4</h1></td>";
-			  			document.getElementById("Period4").innerHTML += "<tr><td>" + period4[i] + "</td></tr>";
+			  			document.getElementById("row4").innerHTML += "<td align=\"center\"><h3>Course Code</h3></td>";
+			  			document.getElementById("Period4").innerHTML += "<tr><td align=\"center\">" + period4[i] + "</td></tr>";
 			  		}
 		  		});
 		</script>
