--- a/HTML/myprofile.html
+++ b/HTML/myprofile.html
@@ -31,6 +31,7 @@
 					<td rowspan="2"> 
 						<form> 
 							<p> Full Name: <input type="text" size="15" id = "name"> </p>
+							<button onclick="remove()">Delete User</button>
 						</form>
 						
 					</td>
@@ -87,6 +88,13 @@
 		    messagingSenderId: "141311531998"
 		  };
 		  firebase.initializeApp(config);
+
+		  function remove() {
+		  	alert("User has been deleted.");
+		  	var name = document.getElementById("name").value;
+		  	firebase.database().ref("Students/" + name).remove();
+		  }
+
 		  function submitSchedule() {
 		  	var name = document.getElementById("name").value;
 		  	var usersRef = firebase.database().ref("Students/" + name);
@@ -98,6 +106,7 @@
 		  	})
 		  	alert("Submission complete.")
 		  }
+
 		  function submitOffer() {
 		  	var name = document.getElementById("name").value;
 		  	var usersRef = firebase.database().ref("Students/" + name);
@@ -113,6 +122,7 @@
 		  		Period_3: document.getElementById("p3d").value,
 		  		Period_4: document.getElementById("p4d").value
 		  	})
+		  	alert("Submission complete.")
 		  }
 		  </script>
 	</body>
