Changed column widths of table for matches

--- a/HTML/matches.html
+++ b/HTML/matches.html
@@ -17,12 +17,12 @@
 		<br>
 		<div align="center">
 			<table width =1250>
-				<col width = 300>
-				<col width = 400>
+				<col width = 385>
+				<col width = 485>
 				<tr align = "center">
 					<th><h1>Personal</h1></th>
 					<th><h1>Select Period</h1></th>
-					<th><h1>Matches</h1></th>
+					<th><h1>Match</h1></th>
 				</tr>
 				<tr align = "center">
 					<td> 
