--- a/HTML/about.html
+++ b/HTML/about.html
@@ -12,5 +12,38 @@
 			<li id="navbarlist"><a href="about.html">About</a> </li>
 			<li id="navbarlist"><a href="home.html">Home</a> </li>
 		</ul>
+		<br> 
+		<br> 
+		<div align = "center">
+			<table width = "1200" id = "about">
+				<tr align = "center" id = "about">
+					<td id = "about"> 
+					<h1> A.S.K and Our Goal </h1>
+					</td>
+				</tr>
+				<tr id = "about">
+					<td colspan = "2" width = "3000" id = "about"> 
+					<p align = "center"> Image of logo goes here </p>
+					</td>
+					<td id = "about"> 
+						<p align = "center"> Our team is comprised of three people, A.S.K: </p>
+						<p align = "center"> Aleena, Shantanu and Kelly </p>
+						<br> 
+						<p> CourseTown is website designed for students struggling with the arrangemnt of their schedule </p>
+						<p> As a semester starts, for students, their is an everlasting problem in getting the courses they want. 
+							However classes have a maximum number of students admitted, which results in some students not getting
+							the courses they want and being put in a class they do not want with no way of switching out. Through some 
+							organization, it can be seen that some students can get into the class they want by switching courses with 
+							another student. </p>
+						<p> For example. A has geography and B has business. A wants to switch into business but the class is full. B wants
+							to switch into geography but that class is full too. However if both A and B switch courses with each other
+							they are able to get into the classes they want </p>
+						<p> As fellow students who too have suffered through this flaw in picking courses, our goal is to make the already 
+							stressful lives of students easier by making an effort to help students get out of classes they don't want and get into 
+							classes they do want</p>
+					</td>
+				</tr>
+			</table>
+
 	</body>
 </html>
